Set the current preset on the statusbar from KisPaintOpBox

Doing so from the canvas resource managers runs into the signal
rate limiter.

BUG:441751
(cherry picked from commit 9202fb2d4e07dfbe5dcd8f005159014ce3df13ea)