libs/ui/kis_statusbar.cc
@@ -455,4 +455,9 @@ void KisStatusBar::removeExtraWidget(QWidget *widget)
     m_extraWidgetsLayout->removeWidget(widget);
 }
 
+void KisStatusBar::setStatusBarStatusLabelText(const QString &text)
+{
+    m_statusBarStatusLabel->setText(text);
+}
+
 
